--- a/sass/index.scss
+++ b/sass/index.scss
@@ -33,7 +33,7 @@ body{
 .wrapper{
   min-width: 1000px;
   background: url("../../images/www/bg_1x.jpg") no-repeat center top;
-  background-size: 1600px 100%;
+  background-size: 1600px 1024px;
 }
 //置顶导航
 .nav-fixed-top{
@@ -749,10 +749,10 @@ body{
     @extend .new-box;
     li{
       float: left;
-      width: 84px;
-      text-align: center;
+      width: 79px;
+      padding-left: 15px;
       i{
-        left: 13px;
+        left: 5px;
         top: 11px;
       }
     }
@@ -807,6 +807,10 @@ body{
     padding-left: 16px;
     font-size: $fontSize16;
     border-bottom: solid 1px $primaryColor;
+    color: $fontColor;
+    a{
+      color: $fontColor;
+    }
   }
   .public-join-right-box-list{
     @extend .new-box;
@@ -857,6 +861,9 @@ body{
   a:hover{
     color: $index;
   }
+  .hover{
+    color: $index;
+  }
 }
 .letter-search-content{
   line-height: 44px;
@@ -868,19 +875,25 @@ body{
     color: $fontColor;
     padding: 0 5px;
   }
+  ul{
+    display: none;
+  }
 }
 .group-dep{
   background: $powerColor;
   padding: 0 5px;
   line-height: 34px;
   height: 34px;
-  font-size: $fontSize;
+  font-size: $fontSize14;
   border-top: 1px solid $primaryColor;
   border-bottom: 1px solid $primaryColor;
   color: $fontColor;
   a{
     color: $fontColor;
     padding: 0 5px;
+  }
+  .hover{
+    color: $index;
   }
 }
 .group-dep-list{
@@ -892,6 +905,7 @@ body{
   a{
     color: $fontColor;
     padding: 0 5px;
+    display: inline-block;
   }
   ul{
     display: none;
