--- a/sass/news.scss
+++ b/sass/news.scss
@@ -23,10 +23,16 @@
     text-align: center;
     border-top: solid 1px $primaryColor;
     border-bottom: solid 1px $primaryColor;
+    .icon{
+      display: none;
+    }
   }
   .hover{
     background: $whiteColor;
     border-top: solid 2px $GgfwColor;
+    .icon{
+      display: block;
+    }
   }
 }
 //新闻中心
@@ -212,6 +218,9 @@
   }
 }
 .news-left-img-list{
+  .news-left-img-list-box{
+    display: none;
+  }
   .list-image{
     padding:20px 0;
     border-bottom: solid 1px $primaryColor;
